[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-value-counts"
authors = [
  { name="Tomer Gabay", email="tomergabay001@gmail.com" },
]
readme = "README_pypi.md"
description = "A package to perform an advanced version of pandas' value_counts()"
license = {text = "MIT"}
requires-python = ">=3.8"

keywords = [
    "eda",
    "pandas",
    "value_counts",
    "groupby",
    "advanced",
    "counts",
    "ratios",
    "data science",
    "data analytics"
]
dependencies = [
    "pandas >= 1.0.5, < 2",
    "numpy >= 1.18.5, < 2",
    "seaborn >= 0.9, < 1"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "advanced_value_counts.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["advanced_value_counts"]
exclude = ["*notebooks*", "*tests*"]

[project.optional-dependencies]
test = [
    "pytest >= 7.1.2, < 8",
    "flake8 >= 5.0.4, < 6",
    "tox >= 3.25.1, < 4"
]

[project.urls]
"Homepage" = "https://github.com/sTomerG/advanced-value-counts"
"Bug Tracker" = "https://github.com/sTomerG/advanced-value-counts/issues"



